Contract Configurator 1.1.0
- Added Biome as a valid expression class.
- Added new method for getting all biomes of a celestial body.
- DATA nodes can now use the shorthand type (eg. int) instead of the full system types (eg. Int32).
- DATA nodes support the uniqueValue attribute to prevent duplicate values/contracts.
- Fixed a bug in the expression parser that caused issues with some ternary statements.
- Reduce amount of Contract Configurator contracts offered so to not overwhelm stock contracts quite so much.

Contract Configurator 1.0.4
- Fixed requirements that were throwing errors when expressions used in targetBody.
- Fixed up some invalid warnings about not loading child CONTRACT_GROUP nodes.

Contract Configurator 1.0.3
- Waypoints now disappear once related contract requirements are met.
- More warnings for unexpected values in configuration (helps authors catch bugs).
- Add expression functions for selecting Celestial Bodies based on player progression.
- TargetDestroyed checks for target being marked as debris (thanks chlue).
- Can now use expressions in ORBIT nodes.
- Verified and recompiled against RemoteTech 1.6.4
- Fix PartModuleUnlockedRequirement that was always returning as met (thanks severedsolo).
- Fix validation for targetBody on some behaviours (thanks rhoark).
- Fix scenario where optional parameters weren't working as expected (thanks Valiant).
- Fix for negative timer values being displayed for count-down parameters (thanks Enceos).
- Fix/workaround for "ghost" issue from exceptions when spawning some vessels (thanks odin_spain).
- Fix for reflection load issue in CompleteContractRequirement when bad assemblies present (thanks Szara).
- Minor bug fixes.

Contract Configurator 1.0.2
- Fix for exception in SpawnPassengers (thanks Jed).

Contract Configurator 1.0.1
- KSP 1.0.2 fixes (CollectScience was broken by the update).
- SpawnKerbal and SpawnPassenger now support setting the Kerbal type and gender.