@@ -3,8 +3,9 @@ Contract Configurator 1.1.0
 - Added new method for getting all biomes of a celestial body.
 - DATA nodes can now use the shorthand type (eg. int) instead of the full system types (eg. Int32).
 - DATA nodes support the uniqueValue attribute to prevent duplicate values/contracts.
-- Fixed a bug in the expression parser that caused issues with some ternary statements.
 - Reduce amount of Contract Configurator contracts offered so to not overwhelm stock contracts quite so much.
+- Fixed a bug in the expression parser that caused issues with some ternary statements.
+- Improvements to vessel tracking for TargetDestroyed (thanks chlue).
 
 Contract Configurator 1.0.4
 - Fixed requirements that were throwing errors when expressions used in targetBody.
